--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.9.2'
     implementation 'org.seleniumhq.selenium:selenium-java:4.8.3'
+    testImplementation("io.github.bonigarcia:webdrivermanager:5.3.3")
 
 }
 
